deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp-1
  template:
    metadata:
      labels:
        app: myapp-1
    spec:
      containers:
        - name: myapp-1
          image: superdjig/myapp-1:v1
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /version
            initialDelaySeconds: 15
            periodSeconds: 5
