service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-1-service
spec:
  selector:
    app: myapp-1
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
